Fix background-clip issue on iOS

--- a/src/Header.module.scss
+++ b/src/Header.module.scss
@@ -21,6 +21,7 @@
     font-weight: inherit;
   }
   span {
+    display: inline-block;
     color: transparent;
     background-image: linear-gradient(60deg, #ef7e62 0%, #ed61a0 100%);
     background-clip: text;
